PJ-669 jumping icons on ff fix

--- a/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-left.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-left.scss
@@ -62,6 +62,7 @@
             @include sprite(header-book);
             transform: scale(0.7);
             display: block;
+            height: 25px;
         }
 
         &:hover {
@@ -126,6 +127,7 @@
             @include sprite(header-account);
             transform: scale(0.7);
             display: block;
+            height: 26px;
         }
     }
 }
