--- a/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-right.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-right.scss
@@ -15,6 +15,7 @@
         @include sprite(header-zoom);
         transform: scale(0.7);
         display: block;
+        height: 31px;
 
         @media all and (max-width: $bp-header) {
             display: none;
